Small Fixes: Fixed the issue of alignment of date-picker on addWiki page

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -496,3 +496,7 @@ a.msg-notification:visited{
     text-align: left;
     margin-left: 14%;
 }
+
+.non-bold{
+    font-weight: normal;
+}
